--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@
 
 # Name of your site (displayed in the header)
 # name: Leonid Keselman
-name: Ran Ding
+name: Zhang Wenchao
 
 # Short bio or description (displayed in the header)
 # description: the profile of an engineer, researcher and software developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # avatar: images/circle_bw_crop.jpg
-avatar: images/ran_photo.jpg
+avatar: images/zhang_photo.jpg
 
 #
 # Flags below are optional
@@ -21,10 +21,10 @@ avatar: images/ran_photo.jpg
 footer-links:
   dribbble:
   # email: lkeselman@gmail.com
-  email: ran.ding@tum.de
+  email: zhangwch2022@shanghaitech.edu.cn
   facebook:
   flickr:
-  github: RanDing2000
+  github: zhang-wen-chao
   # instagram: leo_nid_k
   linkedin:
   pinterest:
@@ -46,7 +46,7 @@ google_analytics:
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 # url: "https://leonidk.com" # the base hostname & protocol for your site
-url: "https://randing2000.github.io/"
+url: "https://zhang-wen-chao.github.io/"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
